...
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="c:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zyt-QI-bj6">
                                                <rect key="frame" x="0.0" y="83.5" width="41.5" height="41.5"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1TV-16-fJ5" userLabel="ATextField">
                                                <rect key="frame" x="20" y="0.0" width="290" height="41.5"/>
                                                <accessibility key="accessibilityConfiguration" identifier="ATextField"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation"/>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="plR-hy-ivv" userLabel="BTextField">
                                                <rect key="frame" x="20" y="41.5" width="290" height="42"/>
                                                <accessibility key="accessibilityConfiguration" identifier="BTextField"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation"/>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MEf-9t-i1C" userLabel="CTextField">
                                                <rect key="frame" x="20" y="83.5" width="290" height="41.5"/>
                                                <accessibility key="accessibilityConfiguration" identifier="CTextField"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation"/>
                                            </textField>
                                        </subviews>
...
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7on-Ih-CNL" userLabel="Row 4">
                                        <rect key="frame" x="0.0" y="278" width="414" height="174"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FUM-0z-mQy">
                                                <rect key="frame" x="136.5" y="0.0" width="79" height="38"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                                <state key="normal" title="Resolver"/>
                                                <connections>
                                                    <action selector="SolveBtnAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="l9z-a6-5NA"/>
                                                </connections>
                                            </button>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Raiz 1:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V0p-X1-UMA">
                                                <rect key="frame" x="0.0" y="38" width="124" height="52"/>
...
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Raiz 2:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fqX-9Z-4rE">
                                                <rect key="frame" x="0.0" y="90" width="124" height="52.5"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qDY-fm-aoL" userLabel="R1TextField">
                                                <rect key="frame" x="53" y="38" width="207" height="52"/>
                                                <accessibility key="accessibilityConfiguration" identifier="R1TextField">
                                                    <bool key="isElement" value="NO"/>
                                                </accessibility>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="X5H-8G-b5Y" userLabel="R2TextField">
                                                <rect key="frame" x="53" y="90" width="207" height="52.5"/>
                                                <accessibility key="accessibilityConfiguration" identifier="R2TextField">
                                                    <bool key="isElement" value="NO"/>
                                                </accessibility>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
...
